# yew-autoprops

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: autoprops.rs  function_component.rs  lib.rs
tests/: function_attr_test.rs  test.rs
tests/cases/: allow-refs-pass.rs  attrs-pass.rs  generics-pass.rs  hooks-pass.rs  name-pass.rs  partialeq-fail.rs  partialeq-fail.stderr  partialeq-pass.rs  require-refs-fail.rs  require-refs-fail.stderr  test_partial_eq_struct.rs
tests/function_component_attr/: autoprops-fail.rs  autoprops-fail.stderr  autoprops-pass.rs
