[package]
    name          = "yew-autoprops"
    version       = "0.1.0"
    edition       = "2021"
    authors       = ["Valentin Golev <v.golev@gmail.com"]
    license       = "MIT OR Apache-2.0"
    repository    = "https://github.com/valyagolev/yew-autoprops"
    homepage      = "https://github.com/valyagolev/yew-autoprops"
    documentation = "https://docs.rs/yew-autoprops/"
    keywords      = ["web", "wasm", "frontend", "webasm", "webassembly"]
    categories    = ["gui", "web-programming", "wasm"]
    description   = "A proc-macro to automatically derive Properties structs from args for Yew components"

[lib]
    proc-macro = true

[dependencies]
    proc-macro2 = "1.0.58"
    quote       = "1.0.27"
    syn         = "2.0.16"

[dev-dependencies]
    #, features = ["csr"]
    yew      = { version = "0.20" }
    trybuild = "1"
