[package]
    name          = "yew-autoprops"
    version       = "0.3.0"
    edition       = "2021"
    authors       = ["Valentin Golev <v.golev@gmail.com"]
    license       = "MIT OR Apache-2.0"
    repository    = "https://github.com/valyagolev/yew-autoprops"
    homepage      = "https://github.com/valyagolev/yew-autoprops"
    documentation = "https://docs.rs/yew-autoprops/"
    keywords      = ["web", "wasm", "frontend", "webasm", "webassembly"]
    categories    = ["gui", "web-programming", "wasm"]
    description   = "proc-macro to automatically derive Properties structs from args for Yew components"
    exclude       = [".github/workflows/*"]

[lib]
    proc-macro = true

[dependencies]
    syn         = { version = "2", features = ["full"] }
    proc-macro2 = "1"
    quote       = "1"


[dev-dependencies]
    #, features = ["csr"]
    yew      = { version = "0.20" }
    trybuild = "1"
